Fix footer styling on mobile

--- a/src/app/components/footer/footer.css
+++ b/src/app/components/footer/footer.css
@@ -13,11 +13,24 @@
 .footer-content {
   composes: container;
   margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
+  display: block;
   align-items: center;
   font-size: 14px;
   color: #6b6b6b;
+  > div {
+    text-align: center;
+    &:last-child {
+      padding: 10px 0;
+    }
+  }
+
+  @media (--larger-than-mobile) {
+    display: flex;
+    justify-content: space-between;
+    > div:last-child {
+      padding: 0;
+    }
+  }
 }
 
 .social-icon {
